[gd_scene load_steps=15 format=3 uid="uid://cxvxbcgsdqxxq"]

[ext_resource type="Theme" uid="uid://dui8cebqku8x5" path="res://interface/themes/olympic_theme.tres" id="1"]
[ext_resource type="Script" uid="uid://cmbyu4nliv3jd" path="res://ui/menu_scenes/title_screen/TitleScreen.gd" id="2"]
[ext_resource type="FontFile" uid="uid://dprehv4eo4p4u" path="res://assets/fonts/Pixel-Powerline-440555/Pixel Powerline.otf" id="3"]
[ext_resource type="Texture2D" uid="uid://cv1lpjudl08v5" path="res://logo.png" id="4"]
[ext_resource type="PackedScene" uid="uid://oiowakvcdw8f" path="res://ui/option_scenes/OptionScreen.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://7r2pj44tr8jc" path="res://local_multiplayer/LocalMultiplayer.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://bummcvqb14wv2" path="res://assets/lock_generic.png" id="7"]
[ext_resource type="PackedScene" uid="uid://did82plnurmh1" path="res://ui/menu_scenes/credits_screen/Credits.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://b0q4ekrko18wp" path="res://special_scenes/combat_UI/gameover/HallOfFame.tscn" id="9"]

[sub_resource type="Animation" id="4"]
length = 0.001

[sub_resource type="Animation" id="1"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("logo_ssf_olympic:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("logo_ssf_olympic:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 1),
"transitions": PackedFloat32Array(1, 0.615572, 1),
"update": 0,
"values": [Vector2(640, 295), Vector2(640, 295), Vector2(640, 206)]
}

[sub_resource type="Animation" id="2"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("logo_ssf_olympic:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 0.63728, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.501961), Color(1, 1, 1, 0.501961), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="3"]

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource("1")
script = ExtResource("2")
options_scene = ExtResource("5")
local_multi_scene = ExtResource("6")
credits_scene = ExtResource("8")
hall_of_fame_scene = ExtResource("9")

[node name="Animator" type="AnimationPlayer" parent="."]
anims/RESET = SubResource("4")
anims/fade_in = SubResource("1")
anims/fade_out = SubResource("2")
anims/option_selected = SubResource("3")

[node name="logo_ssf_olympic" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(640, 295)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4")

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -10.0
offset_right = 150.0
offset_bottom = 355.0
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="Continue" type="Button" parent="Buttons"]
unique_name_in_owner = true
offset_top = 7.0
offset_right = 300.0
offset_bottom = 62.0
custom_minimum_size = Vector2(210, 55)
disabled = true
action_mode = 0
text = "CONTINUE"
flat = true

[node name="Fight" type="Button" parent="Buttons"]
offset_top = 66.0
offset_right = 300.0
offset_bottom = 121.0
custom_minimum_size = Vector2(210, 55)
action_mode = 0
text = "NEW GAME"
flat = true

[node name="TeamVersus" type="Button" parent="Buttons"]
visible = false
offset_top = 125.0
offset_right = 1280.0
offset_bottom = 180.0
custom_minimum_size = Vector2(210, 55)
disabled = true
action_mode = 0
text = "TEAM FIGHT"
flat = true

[node name="Lock" type="Sprite2D" parent="Buttons/TeamVersus"]
visible = false
position = Vector2(290, 40)
scale = Vector2(0.25, 0.25)
texture = ExtResource("7")

[node name="Campaign" type="Button" parent="Buttons"]
visible = false
offset_top = 155.0
offset_right = 1280.0
offset_bottom = 210.0
custom_minimum_size = Vector2(210, 55)
disabled = true
action_mode = 0
text = "CAMPAIGN"
flat = true

[node name="Lock" type="Sprite2D" parent="Buttons/Campaign"]
visible = false
position = Vector2(290, 40)
scale = Vector2(0.25, 0.25)
texture = ExtResource("7")

[node name="Options" type="Button" parent="Buttons"]
offset_top = 125.0
offset_right = 300.0
offset_bottom = 180.0
custom_minimum_size = Vector2(210, 55)
action_mode = 0
text = "OPTIONS"
flat = true

[node name="HallOfFame" type="Button" parent="Buttons"]
offset_top = 184.0
offset_right = 300.0
offset_bottom = 239.0
custom_minimum_size = Vector2(210, 55)
action_mode = 0
text = "HALL OF FAME"
flat = true

[node name="Credits" type="Button" parent="Buttons"]
offset_top = 243.0
offset_right = 300.0
offset_bottom = 298.0
custom_minimum_size = Vector2(0, 55)
action_mode = 0
text = "CREDITS"
flat = true

[node name="QuitButton" type="Button" parent="Buttons"]
offset_top = 302.0
offset_right = 300.0
offset_bottom = 357.0
custom_minimum_size = Vector2(0, 55)
action_mode = 0
text = "QUIT"
flat = true

[node name="Tooltips" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 181.0
offset_top = -10.0
offset_right = 631.0
offset_bottom = 340.0
custom_minimum_size = Vector2(450, 0)
alignment = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Continue" type="RichTextLabel" parent="Tooltips"]
modulate = Color(1, 1, 1, 0)
offset_top = 59.0
offset_right = 450.0
offset_bottom = 114.0
custom_minimum_size = Vector2(450, 55)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_fonts/normal_font = SubResource("5")
bbcode_enabled = true
text = "2 TO 4 PLAYERS FREE FOR ALL"
text = "2 TO 4 PLAYERS FREE FOR ALL"
scroll_active = false

[node name="Fight" type="RichTextLabel" parent="Tooltips"]
modulate = Color(1, 1, 1, 0)
offset_top = 118.0
offset_right = 450.0
offset_bottom = 173.0
custom_minimum_size = Vector2(450, 55)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_fonts/normal_font = SubResource("5")
bbcode_enabled = true
text = "2 TO 4 PLAYERS FREE FOR ALL"
text = "2 TO 4 PLAYERS FREE FOR ALL"
scroll_active = false

[node name="TeamVersus" type="RichTextLabel" parent="Tooltips"]
visible = false
modulate = Color(1, 1, 1, 0)
offset_top = 149.0
offset_right = 450.0
offset_bottom = 204.0
custom_minimum_size = Vector2(450, 55)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_fonts/normal_font = SubResource("5")
bbcode_enabled = true
text = "TEAM VS TEAM
[color=#ffde5f][wave]CURRENTLY UNDER DEVELOPMENT![/wave][/color]"
text = "TEAM VS TEAM
CURRENTLY UNDER DEVELOPMENT!"
scroll_active = false

[node name="Campaign" type="RichTextLabel" parent="Tooltips"]
visible = false
modulate = Color(1, 1, 1, 0)
offset_top = 179.0
offset_right = 450.0
offset_bottom = 234.0
custom_minimum_size = Vector2(450, 55)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_fonts/normal_font = SubResource("5")
bbcode_enabled = true
text = "1 TO 4 PLAYERS SINGLE/COOPERATIVE
[color=#ffde5f][wave]CURRENTLY UNDER DEVELOPMENT![/wave][/color]"
text = "1 TO 4 PLAYERS SINGLE/COOPERATIVE
CURRENTLY UNDER DEVELOPMENT!"
scroll_active = false

[node name="Options" type="RichTextLabel" parent="Tooltips"]
modulate = Color(1, 1, 1, 0)
offset_top = 177.0
offset_right = 450.0
offset_bottom = 232.0
custom_minimum_size = Vector2(450, 55)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_fonts/normal_font = SubResource("5")
bbcode_enabled = true
scroll_active = false

[node name="Help" type="RichTextLabel" parent="Tooltips"]
visible = false
modulate = Color(1, 1, 1, 0)
offset_top = 148.0
offset_right = 450.0
offset_bottom = 208.0
custom_minimum_size = Vector2(450, 55)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_fonts/normal_font = SubResource("5")
bbcode_enabled = true
scroll_active = false

[node name="Credits" type="RichTextLabel" parent="Tooltips"]
visible = false
modulate = Color(1, 1, 1, 0)
offset_top = 222.0
offset_right = 450.0
offset_bottom = 282.0
custom_minimum_size = Vector2(450, 55)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_fonts/normal_font = SubResource("5")
bbcode_enabled = true
scroll_active = false

[node name="QuitButton" type="RichTextLabel" parent="Tooltips"]
modulate = Color(1, 1, 1, 0)
offset_top = 236.0
offset_right = 450.0
offset_bottom = 291.0
custom_minimum_size = Vector2(450, 55)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_fonts/normal_font = SubResource("5")
bbcode_enabled = true
scroll_active = false

[connection signal="pressed" from="Buttons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Buttons/Fight" to="." method="_on_Fight_pressed"]
[connection signal="pressed" from="Buttons/TeamVersus" to="." method="_on_Fight_pressed"]
[connection signal="pressed" from="Buttons/Campaign" to="." method="_on_Fight_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Buttons/HallOfFame" to="." method="_on_HallOfFame_pressed"]
[connection signal="pressed" from="Buttons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
